fix: align logo and button

--- a/codeflix/styles/header.css
+++ b/codeflix/styles/header.css
@@ -5,7 +5,8 @@
   top: 0;
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 20px;
+  align-items: center;
 }
 .header__image {
   width: 120px;
